--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,13 +1,15 @@
-import com.sun.tools.javac.util.StringUtils
-
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 java {
-    sourceCompatibility = "1.6"
-    targetCompatibility = "1.8"
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
+
+version = '1.3.5'
 
 repositories {
     mavenCentral()
@@ -16,9 +18,9 @@ repositories {
 publishing {
     publications {
         maven(MavenPublication) {
-            group 'utils.StringUtils'
-            version '1.0-SNAPSHOT'
-            artifactId 'stringUtils'
+            groupId = 'com.epam.utils'
+            artifactId = 'library'
+            version = 0.1
 
             from components.java
         }
@@ -26,19 +28,11 @@ publishing {
 }
 
 dependencies {
-    constraints{
-        impementation 'org.apache.commons:commons-lang3:3.12.0'
-    }
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 jar {
     manifest {
-        attributes 'Implementation-Title' : 'StringUtils', 'Implementation-Version': 3.12.0
+        attributes 'Implementation-Title' : 'StringUtils', 'Implementation-Version': 1.1
     }
 }
-
-test {
-    useJUnitPlatform()
-}
-
-publishMavenPublicationToMavenLocal {}.mustRunAfter('build')
